Fix error with column references